--- a/my-app/pom.xml
+++ b/my-app/pom.xml
@@ -6,6 +6,7 @@
 
   <groupId>com.mycompany.app</groupId>
   <artifactId>my-app</artifactId>
+  <packaging>war</packaging>
   <version>1.0-SNAPSHOT</version>
 
   <name>my-app</name>
@@ -49,7 +50,7 @@
           <version>2.22.1</version>
         </plugin>
         <plugin>
-          <artifactId>maven-jar-plugin</artifactId>
+          <artifactId>maven-war-plugin</artifactId>
           <version>3.0.2</version>
         </plugin>
         <plugin>
