--- a/my-app/pom.xml
+++ b/my-app/pom.xml
@@ -50,6 +50,7 @@
           <version>2.22.1</version>
         </plugin>
         <plugin>
+           <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-war-plugin</artifactId>
            <version>3.4.0</version>
         </plugin>
